# tripper

./: .editorconfig  Cargo.toml  LICENSE  build.rs
lib/: crypter  crypter.c
src/: generator.rs  lib.rs  main.rs
src/c/: crypter.c
