[package]
name = "tripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bytes = "1.1.0"
des = "0.0.4"
encoding_rs = "0.8.31"
libc = "0.2.124"
magic-crypt = "3.1.10"
pwhash = { path = "../pwhash" }
regex = "1.5.5"
rust-crypto = "0.2.36"
sha1 = "0.10.1"


[build-dependencies]
cc = "1.0"
